--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,20 @@ jobs:
       with:
         node-version: '16'
 
+    - name: Cache node modules
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
     - name: Install dependencies
       run: npm install --legacy-peer-deps
 
-    - name: Build Docker container
+    - name: Enable Docker BuildKit and build image
       run: |
+        export DOCKER_BUILDKIT=1
         docker-compose down
         docker-compose build --no-cache
         docker-compose up -d
@@ -33,8 +42,9 @@ jobs:
     - name: Run tests
       run: npm test
 
-    - name: Analyze logs
-      run: |
-        if [ -f /root/.npm/_logs/*.log ]; then
-          cat /root/.npm/_logs/*.log
-        fi
+    - name: Upload logs on failure
+      if: failure()
+      uses: actions/upload-artifact@v2
+      with:
+        name: npm-error-logs
+        path: /root/.npm/_logs/
