--- a/.github/workflows/ci_cd_ai_workflow.yml
+++ b/.github/workflows/ci_cd_ai_workflow.yml
@@ -28,11 +28,22 @@ jobs:
         run: |
           REQUIRED_SECRETS=("CODACY_PROJECT_TOKEN" "EMAIL_FALLBACK_URL" "OPENAI_API_KEY" "PAGERDUTY_KEY" "SLACK_WEBHOOK" "VERCEL_TOKEN" "GITHUB_TOKEN" "EMAIL_USERNAME" "EMAIL_PASSWORD" "EMAIL_RECIPIENT")
           for secret in "${REQUIRED_SECRETS[@]}"; do
-            if [ -z "${{ secrets[$secret] }}" ]; then
+            if [ -z "${!secret}" ]; then
               echo "::error::$secret is not set"
               exit 1
             fi
           done
+        env:
+          CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          EMAIL_FALLBACK_URL: ${{ secrets.EMAIL_FALLBACK_URL }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          PAGERDUTY_KEY: ${{ secrets.PAGERDUTY_KEY }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+          EMAIL_RECIPIENT: ${{ secrets.EMAIL_RECIPIENT }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -94,7 +105,7 @@ jobs:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v21.0.0
+        uses: amondnet/vercel-action@v20.0.0
         with:
           vercel_token: ${{ secrets.VERCEL_TOKEN }}
           vercel_org_id: ${{ secrets.VERCEL_ORG_ID }}
@@ -130,6 +141,10 @@ jobs:
           to: ${{ secrets.EMAIL_RECIPIENT }}
           from: GitHub Actions <actions@example.com>
 
+  grafana_dashboard:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
       - name: Set up Grafana for monitoring
         run: |
           echo "Setting up Grafana dashboards for real-time monitoring..."
@@ -140,7 +155,7 @@ jobs:
           echo "Publishing metrics to Grafana..."
           # Placeholder for script to publish metrics to Grafana
 
-      - name: Notify on Grafana setup
+      - name: Notify on successful setup
         uses: rtCamp/action-slack-notify@v2.0.0
         env:
           SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
@@ -148,4 +163,25 @@ jobs:
           SLACK_MESSAGE: "Grafana dashboard setup for monitoring completed successfully!"
           SLACK_COLOR: good
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
+  publish_metrics:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Collect and publish metrics
+        run: |
+          echo "Collecting application metrics..."
+          # Placeholder for script to collect metrics
+          echo "Publishing metrics to Grafana..."
+          # Placeholder for script to publish collected metrics to Grafana
+
+      - name: Notify on metrics publication
+        uses: rtCamp/action-slack-notify@v2.0.0
+        env:
+          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+          SLACK_TITLE: "Metrics Publication"
+          SLACK_MESSAGE: "Metrics collected and published to Grafana successfully!"
+          SLACK_COLOR: good
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
 
