Lisätty päivitetty CI/CD workflow ja ChatGPT-integraatio

--- a/.github/workflows/ci_cd_ai_workflow.yml
+++ b/.github/workflows/ci_cd_ai_workflow.yml
@@ -11,8 +11,8 @@ on:
       - opened
       - synchronize
   schedule:
-    - cron: '0 0 * * 0'  # Weekly schedule
-    - cron: '0 0 1 * *'  # Monthly updates
+    - cron: '0 0 * * 0'  # Weekly schedule to run the workflow
+    - cron: '0 0 1 * *'  # Monthly schedule for dependency updates
 
 jobs:
   build:
@@ -28,7 +28,7 @@ jobs:
         run: |
           REQUIRED_SECRETS=("CODACY_PROJECT_TOKEN" "EMAIL_FALLBACK_URL" "OPENAI_API_KEY" "PAGERDUTY_KEY" "SLACK_WEBHOOK" "VERCEL_TOKEN" "GITHUB_TOKEN" "EMAIL_USERNAME" "EMAIL_PASSWORD" "EMAIL_RECIPIENT")
           for secret in "${REQUIRED_SECRETS[@]}"; do
-            if [ -z "${{ secrets[${secret}] }}" ]; then
+            if [ -z "${{ secrets[$secret] }}" ]; then
               echo "::error::$secret is not set"
               exit 1
             fi
@@ -62,12 +62,12 @@ jobs:
         run: npm run docs:generate
 
       - name: Run Codacy Analysis
-        uses: codacy/codacy-analysis-cli-action@v3
+        uses: codacy/codacy-analysis-cli-action@latest
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
       - name: Run security scan
-        uses: snyk/actions/node@master
+        uses: snyk/actions/node@v3
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -87,14 +87,14 @@ jobs:
         run: npm run build
 
       - name: Run e2e Tests
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v4
         with:
           build: npm run build
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20.0.0
+        uses: amondnet/vercel-action@v21.0.0
         with:
           vercel_token: ${{ secrets.VERCEL_TOKEN }}
           vercel_org_id: ${{ secrets.VERCEL_ORG_ID }}
@@ -148,4 +148,41 @@ jobs:
           SLACK_MESSAGE: "Grafana dashboard setup for monitoring completed successfully!"
           SLACK_COLOR: good
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
+  publish_metrics:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Collect and publish metrics
+        run: |
+          echo "Collecting application metrics..."
+          # Placeholder for script to collect metrics
+          echo "Publishing metrics to Grafana..."
+          # Placeholder for script to publish collected metrics to Grafana
+
+      - name: Notify on metrics publication
+        uses: rtCamp/action-slack-notify@v2.0.0
+        env:
+          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+          SLACK_TITLE: "Metrics Publication"
+          SLACK_MESSAGE: "Metrics collected and published to Grafana successfully!"
+          SLACK_COLOR: good
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
+  chatgpt_integration:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          pip install openai requests
+
+      - name: Run ChatGPT script
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPEN
 
