Päivitetty CI/CD workflow uusimmilla integraatioilla ja korjauksilla

--- a/.github/workflows/ci_cd_ai_workflow.yml
+++ b/.github/workflows/ci_cd_ai_workflow.yml
@@ -67,7 +67,7 @@ jobs:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
       - name: Run security scan
-        uses: snyk/actions/node@v3
+        uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -149,40 +149,35 @@ jobs:
           SLACK_COLOR: good
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
 
-  publish_metrics:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - name: Collect and publish metrics
-        run: |
-          echo "Collecting application metrics..."
-          # Placeholder for script to collect metrics
-          echo "Publishing metrics to Grafana..."
-          # Placeholder for script to publish collected metrics to Grafana
-
-      - name: Notify on metrics publication
-        uses: rtCamp/action-slack-notify@v2.0.0
-        env:
-          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
-          SLACK_TITLE: "Metrics Publication"
-          SLACK_MESSAGE: "Metrics collected and published to Grafana successfully!"
-          SLACK_COLOR: good
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-
   chatgpt_integration:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.x'
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
-          pip install openai requests
+          python -m pip install --upgrade pip
+          pip install openai
 
-      - name: Run ChatGPT script
+      - name: Run ChatGPT Python script
+        run: python scripts/chatgpt_integration.py
         env:
-          OPENAI_API_KEY: ${{ secrets.OPEN
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+      - name: Notify ChatGPT Integration Success
+        uses: rtCamp/action-slack-notify@v2.0.0
+        env:
+          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+          SLACK_TITLE: "ChatGPT Integration"
+          SLACK_MESSAGE: "ChatGPT integration completed successfully!"
+          SLACK_COLOR: good
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
 
