--- a/.github/workflows/ci_cd_ai_workflow.yml
+++ b/.github/workflows/ci_cd_ai_workflow.yml
@@ -100,6 +100,13 @@ jobs:
           vercel_org_id: ${{ secrets.VERCEL_ORG_ID }}
           vercel_project_id: ${{ secrets.VERCEL_PROJECT_ID }}
 
+      - name: ChatGPT Integration
+        run: |
+          echo "Running ChatGPT integration script..."
+          python3 scripts/chatgpt_integration.py
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
       - name: Notify on Slack
         uses: rtCamp/action-slack-notify@v2.0.0
         env:
@@ -146,37 +153,6 @@ jobs:
           SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
           SLACK_TITLE: "Grafana Setup"
           SLACK_MESSAGE: "Grafana dashboard setup for monitoring completed successfully!"
-          SLACK_COLOR: good
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-
-  chatgpt_integration:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install openai
-
-      - name: Run ChatGPT Python script
-        run: python scripts/chatgpt_integration.py
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-
-      - name: Notify ChatGPT Integration Success
-        uses: rtCamp/action-slack-notify@v2.0.0
-        env:
-          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
-          SLACK_TITLE: "ChatGPT Integration"
-          SLACK_MESSAGE: "ChatGPT integration completed successfully!"
           SLACK_COLOR: good
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
 
