--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "winston": "^3.6.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@storybook/react": "^8.3.5",
     "@typescript-eslint/eslint-plugin": "^5.36.0",
     "@typescript-eslint/parser": "^5.36.0",
@@ -92,7 +93,9 @@
     "cross-env": "^7.0.3",
     "cypress": "^13.15.0",
     "cypress-axe": "^1.5.0",
-    "eslint": "^8.23.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
@@ -106,6 +109,7 @@
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.4",
+    "typescript-eslint": "^8.9.0",
     "webpack": "^5.64.0",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.9.1"
