--- a/ci_cd_ai_workflow.yml
+++ b/ci_cd_ai_workflow.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: [16, 18, 20]
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated to v3
+        uses: actions/checkout@v3
 
       - name: Validate secrets
         run: |
@@ -35,7 +35,7 @@ jobs:
           done
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # Updated to v3
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -87,7 +87,7 @@ jobs:
         run: npm run build
 
       - name: Run e2e Tests
-        uses: cypress-io/github-action@v4  # Updated to v4
+        uses: cypress-io/github-action@v4
         with:
           build: npm run build
         env:
